Add welcome page. Complete documentation

--- a/django/app/hivernants/templates/hivernants/liste.html
+++ b/django/app/hivernants/templates/hivernants/liste.html
@@ -19,6 +19,6 @@
 {#    {% endfor %}#}
 {#    </ul>#}
 {#  {% endif %}#}
-        <button>Ajouter un hivernant</button>
+        <a href="{% url 'admin:hivernants_hivernant_add' %}" class="btn btn-primary">Ajouter un hivernant</a>
   </body>
 </html>
