--- a/django/app/hivernants/templates/hivernants/liste.html
+++ b/django/app/hivernants/templates/hivernants/liste.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Annuaire des héros</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="{% static 'hivernants/style.css' %}">
   </head>
