--- a/django/app/hivernants/templates/hivernants/map.html
+++ b/django/app/hivernants/templates/hivernants/map.html
@@ -1,8 +1,9 @@
 {% load static %}
 <!doctype html>
-<html lang="en" class="map">
+<html lang="fr" class="map">
 <head>
-  <title>Markers Map</title>
+  <meta charset="utf-8">
+  <title>Carte des héros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="{% static 'hivernants/style.css' %}">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
